removes CMCClassUnloadingEnabled for main